istio/aggregator-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: aggregator-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aggregator-virtual-service
spec:
  hosts:
  - '*'
  gateways:
  - aggregator-gateway
  http:
  - match:
    - uri:
        prefix: /camel/catalogue
    route:
    - destination:
        host: aggregator-service
        port:
          number: 8080
